fixed speaker images was out of the container

--- a/css/style.css
+++ b/css/style.css
@@ -520,7 +520,7 @@ canvas {
 }
 
 .speaker-headline {
-  font-size: 3.5em;
+  font-size: 2.5em;
   color: white;
   font-family: poppins;
   text-align: center;
@@ -541,8 +541,8 @@ canvas {
   font-family: "Poppins", sans-serif;
   text-align: center;
   padding: 0 4em 0.8em 4em;
-  width: 230px;
-  height: 420px;
+  width: 280px;
+  height: 450px;
   /* max-width: 250px; */
   border-radius: 5px;
   /* box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3); */
@@ -554,7 +554,7 @@ canvas {
   border-radius: 50%;
   border: 5px solid #fff;
   object-fit: cover;
-  margin: 20px auto;
+  margin: 10px auto;
 }
 
 .wrapper .title {
